# NoobieEngine

./: .gitignore  CMakeLists.txt  MatrixUtil.glsl  README.md  SimpleTransform.vertexshader  SingleColor.fragmentshader  main.cpp
Core/: CMakeLists.txt  GLResource.cpp  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Core/Infrastructure/: CMakeLists.txt
Core/Infrastructure/include/: AssimpModelLoader.h  FileTextureLoader.h  GLFWContext.h  GLSafe.h  ShaderLoader.h
Core/Infrastructure/src/: AssimpModelLoader.cpp  FileTextureLoader.cpp  GLFWContext.cpp  GLResource.cpp  ShaderLoader.cpp
Core/Lighting/: CMakeLists.txt
Core/Lighting/include/: PositionalLightModel.h  PositionalLightObject.h
Core/Lighting/src/: PositionalLightModel.cpp  PositionalLightObject.cpp
Core/Primitives/: CMakeLists.txt
Core/Primitives/include/: DrawableObject.h  MeshObject.h  SphereObject.h
Core/Primitives/src/: DrawableObject.cpp  MeshObject.cpp  SphereObject.cpp
Core/Renderer/: CMakeLists.txt
Core/Renderer/include/: BufferDataRenderable.h  BufferDataRenderable.hpp  BufferIndexRenderable.h  BufferIndexRenderable.hpp  BufferMode.h  Camera.h  CircleObject.h  Mesh.h  MeshRenderer.h  Renderer.h  Scene.h  SphereObject.h  VertexArray.h  VertexArray.hpp  VertexBuffer.h  VertexBuffer.hpp  VertexBufferBase.h  VertexBufferRenderable.h  VertexBufferRenderable.hpp  VertexBufferScope.h
Core/Renderer/src/: BufferDataRenderable.cpp  BufferIndexRenderable.cpp  Camera.cpp  CircleObject.cpp  MeshRenderer.cpp  Renderer.cpp  Scene.cpp  SphereObject.cpp  TextureScope.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferBase.cpp  VertexBufferRenderable.cpp  VertexBufferScope.cpp
Core/include/: Camera.h  DrawableObject.h  Mesh.h  Object.h  Renderer.h  Texture.h  Texture.hpp  TextureScope.h  VertexArray.h  VertexArray.hpp  VertexBuffer.h  VertexBuffer.hpp  VertexBufferMode.h  VertexBufferScope.h
Core/src/: Camera.cpp  DrawableObject.cpp  Mesh.cpp  Object.cpp  Renderer.cpp  Texture.cpp  TextureScope.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferScope.cpp
Examples/: CMakeLists.txt  SimpleTransform.vertexshader  SingleColor.fragmentshader  fragShader.glsl  vertShader.glsl
Examples/include/: Texture.h
Examples/src/: ModelLoader.cpp  Sphere.cpp  Texture.cpp
Infrastructure/: AssimpModelLoader.cpp  AssimpModelLoader.h  CMakeLists.txt  FileTextureLoader.cpp  FileUtils.cpp  FileUtils.h  GLFWContext.cpp  GLFWContext.h  GLResource.h  GLSafe.cpp  GLSafe.h  GLUtils.cpp  ShaderLoader.cpp  ShaderLoader.h
Infrastructure/include/: AssimpModelLoader.h  FileTextureLoader.h  GLFWContext.h  GLSafe.h  GLUtils.h  ShaderLoader.h
Infrastructure/src/: FileTextureLoader.cpp  FileUtils.cpp  GLFWContext.cpp  GLSafe.cpp  GLUtils.cpp
Interfaces/: CMakeLists.txt  GraphicTypes.h  IContext.h  IModelLoader.h  IPositionalLightModel.h  IRenderable.h  IRenderableObject.h  IShaderLoader.h  ITextureLoader.h  Materials.h  ShaderFileInfo.h
Programs/: CMakeLists.txt
Programs/include/: BaseProgram.h  CubeProgram.h  MeshProgram.h  PlanetProgram.h  SphereProgram.h
Programs/src/: BaseProgram.cpp  CubeProgram.cpp  MeshProgram.cpp  PlanetProgram.cpp  SphereProgram.cpp
Samples/: CMakeLists.txt
Samples/src/: Texture.cpp
