add_library(Core)

target_sources(Core
        PRIVATE
        VertexBuffer.cpp
        VertexArray.cpp
        Renderer.cpp
        Mesh.cpp
        PUBLIC
		VertexBuffer.h
        VertexArray.h
        Renderer.h
        Mesh.h
        )
include_directories(
		../external/glfw-3.1.2/include/
        ../external/glm-0.9.7.1/
        ../external/glew-1.13.0/include/
		.
		)
target_link_libraries(
		Core
		${OPENGL_LIBRARY}
)
